
package damuzhi;

option java_package = "com.damuzhi.travel";
option java_outer_classname = "TicketHotelProtos";

enum PersonAge {
    PERSON_AGE_ADULT = 1;       //成人
    PERSON_AGE_CHILD = 2;       //小孩
}

//性别
enum PersonGender {
    PERSON_GENDER_MALE = 1;     //男
    PERSON_GENDER_FEMALE = 2;   //女
}

//机票支付状态
enum AirPaymentStatus {
    AIR_PAYMENT_NOT = 1;        //未支付
    AIR_PAYMENT_FINISH =2;      //已支付
}

//入住人 / 联系人 / 登机人
message Person {
    optional string name = 1;               //姓名
    optional string nameEnglish = 2;        //英文名字
    
    optional PersonAge age = 3;             //成人或小孩
    optional PersonGender gender = 4;       //性别
    optional int32 nationalityId = 5;       //国籍id
    optional int32 cardTypeId = 6;          //证件类型
    optional string cardNumber = 7;         //证件号码
    optional string cardIssuePlace = 8;     //证件签发地
    optional int32 cardValidDate = 9;       //证件有效日期
    optional int32 birthday = 10;           //出生日期

    optional string phone = 11;             //电话
}

//预订房间信息
message HotelOrderRoomInfo {
    required int32 roomId = 1;                  //房间id
    required int32 count = 2;                   //房间数
}

//酒店订单
message HotelOrder {
    required int32 checkInTime = 1;             //入住时间
    required int32 checkOutTime = 2;            //退房时间
    required int32 hotelId = 3;                 //酒店id(对应Place结构的placeId)
    repeated HotelOrderRoomInfo roomInfos = 4;  //房间预订信息
    repeated Person checkInPersons = 5;         //入住人信息
}

//舱位
message FlightClass {
    required int32 type = 1;                    //舱位类型
    required string name = 2;                   //名称
    optional int32 remainingCount  = 3;         //剩余票数
    
    optional string ticketPrice = 10;           //机票价格
    optional string airportFee = 11;            //机建费
    optional sring fuelFee = 12;                //燃油费用
    optional string price = 13;                 //价格
    
    optional string refundNote = 20;            //退票规则
    optional string changeNote = 21;            //改签规则
}

//航班
message Flight {
    required string flightNumber = 1;           //航班编号
    required int32 airlineId = 2;               //航空公司id
    optional string craftType = 3;              //机型
    repeated FlightClass flightClasses = 4;     //舱位
    
    optional string departAirport = 5;          //出发机场
    optional string arriveAirport = 6;          //达到机场
    optional int32 departTime = 7;              //出发时间
    optional int32 arriveTime = 8;              //到达时间
    
    optional bool transit = 9;                  //是否中转
    optional string transitInfo = 10;           //中转信息
}

//机票订单
message AirOrder {
    required string flightNumber = 1;           //航班编号
    required int32 flightClassType = 2;         //舱位类型
    optional bool depart = 3;                   //是否去程
    optional int32 flightDate = 4;              //航班日期
    optional bool insurance = 5;                //是否购买保险
    optional bool sendTicket = 6;               //是否快递机票

    optional string insuranceFee = 10;          //保险费用
    optional string sendTicketFee = 11;         //快递费用
    optional Flight flight = 12;                //航班信息(仅用于订单查询)
    optional FlightClass flightClass = 13;      //舱位信息(仅用于订单查询)
    
    repeated Person passenger = 14;             //乘客
}

//信用卡
message CreditCard {
    required int32 bankId = 1;                  //发卡银行
    required string nmuber = 2;                 //卡号
    optional string name = 3;                   //持卡人姓名
    optional string ccv = 4;                    //卡背面的数字
    optional int32 validDate = 5;               //有效日期

    optional int32 cardTypeId = 6;              //证件类型id
    optional string cardNumber = 7;             //证件号码
}

//支付信息
message PaymentInfo {
    required int32 paymentType = 1;             //支付类型(1代表信用卡，暂时只有信用卡)
    optional CreditCard creditCard = 2;         //信用卡
}

//机+酒订单
message AirHotelOrder {
    optional int32 departCityId = 1;            //出发城市id
    optional int32 arriveCityId = 2;            //目的城市id
    repeated AirOrder airOrders = 3;            //机票订单
    repeated HotelOrder hotelOrders = 4;        //酒店订单
    optional PaymentInfo paymentInfo = 5;       //支付信息
    optional Person contactPerson = 6;          //联系人

    optional optional orderNumber = 20;         //订单编号 (仅用于订单查询)
    optional int32 orderDate = 21;              //订单日期 (仅用于订单查询)
    optional int32 orderStatus = 22;            //订单状态 (仅用于订单查询)

    optional string hotelPrice = 30;            //酒店总价格 (仅用于订单查询)
    optional string airPrice = 31;              //机票总价格 (仅用于订单查询)
    optional int32 hotelPaymentStatus = 32;     //酒店支付状态 (仅用于订单查询)
    optional AirPaymentStatus airPaymentStatus = 33;   //机票支付状态 (仅用于订单查询)
}


